[package]
name = "gta-kbs"
version = "1.3.0"
edition = "2021"
rust-version = "1.75"
description = "Intel Trust Authority Key Broker Service (KBS) - Rust implementation"
authors = ["Intel Corporation"]
license = "BSD-3-Clause"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Crypto
aes-gcm = "0.10"
rsa = "0.9"
sha2 = "0.10"
bcrypt = "0.15"

# JWT
jsonwebtoken = "9.2"

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# HTTP Client (for ITA client)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
time = { version = "0.3", features = ["serde", "formatting"] }

# Base64
base64 = "0.21"

# Environment variables
dotenvy = "0.15"

# PEM encoding
pem = "3.0"

# Derive macros
derive_builder = "0.20"

# Hex encoding
hex = "0.4"

# Constant-time comparison
subtle = "2.5"

# Regex
regex = "1.10"

# URL parsing
url = "2.5"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tower-test = "0.4"
